--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy>=1.21
 scipy>=1.7
 matplotlib>=3.4
-scikit-learn>=1.0
+pandas>=1.3.0
 torch==1.12.1+cu113
 torchvision==0.13.1+cu113
 tqdm>=4.62
